crates/postcompile/src/snapshots/postcompile__tests__compile_failure.snap
---
source: crates/postcompile/src/lib.rs
expression: out
---
exit status: 1
--- expand_stderr
error: expected one of `!` or `::`, found `<eof>`
 --> [BUILD_DIR]/[POST_COMPILE]:1:1
  |
1 | invalid_rust_code
  | ^^^^^^^^^^^^^^^^^ expected one of `!` or `::`

error: aborting due to 1 previous error
